k8s/manifests-5ed57e/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-5ed57e
  namespace: journee
  labels:
    app: journee-5ed57e
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-5ed57e
  template:
    metadata:
      labels:
        app: journee-5ed57e
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-5ed57e
          image: gcr.io/my-docker-471807/journee:v7.0.0
          ports:
            - containerPort: 3000
