k8s/manifests-5ed57e/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-5ed57e
  namespace: journee
spec:
  selector:
    app: journee-5ed57e
  ports:
    - port: 80
      targetPort: 3000
